# 3dscan

./: LICENCE  README.md
1/: 1.layout  Pattern_generator.cbp  Pattern_generator.depend  Pattern_generator.layout  Pattern_generator_build_log.html  pattern_generator.cpp
2/: Project_pattern.cbp  Project_pattern.depend  Project_pattern.layout  Project_pattern_build_log.html  project_pattern.cpp
3/: Phase_wrapping.cbp  Phase_wrapping.depend  Phase_wrapping.layout  Phase_wrapping_build_log.html  wrapped_phase.cpp
4/: Phase_unwrap.cbp  Phase_unwrap.layout  (+1 more)
5/: 5.cbp  (+2 more)
M_tech_project_console/Projector_calibration/vpc-0.1/: CMakeLists.txt  README
M_tech_project_console/Projector_calibration/vpc-0.1/examples/: CMakeLists.txt  H.yml  README  main_autocalib.cxx  main_direct.cxx  main_direct.cxx~  main_sampling.cxx  match_cam_proj_0.yml  match_cam_proj_1.yml  match_cam_proj_10.yml  match_cam_proj_11.yml  match_cam_proj_12.yml  match_cam_proj_13.yml  match_cam_proj_14.yml  match_cam_proj_2.yml  match_cam_proj_3.yml  match_cam_proj_4.yml  match_cam_proj_5.yml  match_cam_proj_6.yml  match_cam_proj_7.yml  match_cam_proj_8.yml  match_cam_proj_9.yml
M_tech_project_console/Projector_calibration/vpc-0.1/include/: autocalib.h  direct.h  htrki.h  sampling.h  template_header.h  vpc.h  vpc_base.h  vpc_bundle.h
M_tech_project_console/Projector_calibration/vpc-0.1/src/: CMakeLists.txt  autocalib.cxx  direct.cxx  htrki.cxx  sampling.cxx  vpc_base.cxx  vpc_bundle.cxx
M_tech_project_console/Projector_calibration/vpc-0.1/utils/: CMakeLists.txt  README  calib_camera.cxx  get_homog.cxx
(+218 files in other folders)
