cmake_minimum_required(VERSION 2.8)


PROJECT( VPC )

SET( CMAKE_CXX_FLAGS "-g " )
SET( CMAKE_DIR $ENV{CMAKE_DIR} )
SET(CMAKE_MODULE_PATH ${CMAKE_DIR})
SET( CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib )

SET(OpenCV_DIR ${CMAKE_MODULE_PATH})

FIND_PACKAGE( OpenCV REQUIRED )

INCLUDE_DIRECTORIES( include )

ADD_SUBDIRECTORY( src )
ADD_SUBDIRECTORY( examples )
ADD_SUBDIRECTORY( utils )

SET(XSUPPORT "on" CACHE BOOL "Build with X11 support")

IF(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT) 
	SET(CMAKE_INSTALL_PREFIX /usr/local/ CACHE PATH "vpc install directory." FORCE) 
ENDIF(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT) 


#IF(NOT DEFINED CMAKE_INSTALL_LIBDIR)
#	set(CMAKE_INSTALL_LIBDIR ${CMAKE_INSTALL_PREFIX}/lib)
#ENDIF(NOT DEFINED CMAKE_INSTALL_LIBDIR)


